--- a/ModelRocketLogbook/View/FlightsView.xaml
+++ b/ModelRocketLogbook/View/FlightsView.xaml
@@ -1,8 +1,8 @@
 ﻿<UserControl x:Class="ModelRocketLogbook.View.FlightsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:v="clr-namespace:ModelRocketLogbook.View"
              xmlns:fa="http://schemas.fontawesome.io/icons/"
              mc:Ignorable="d">
@@ -16,22 +16,8 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Grid.Column="0">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="*" />
-            </Grid.ColumnDefinitions>
-
-            <ComboBox Grid.Column="0" Margin="{StaticResource StandardPadding}" ItemsSource="{Binding SortOptions}" SelectedIndex="{Binding SortSelectedIndex, Mode=TwoWay}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
-            </ComboBox>
-
-            <Button Grid.Column="1" Margin="{StaticResource StandardPadding}" Command="{Binding AddNewFlight}">
-                <StackPanel Orientation="Horizontal">
-                    <fa:ImageAwesome Icon="PlusCircle" MaxHeight="{StaticResource MaxIconDimension}" MaxWidth="{StaticResource MaxIconDimension}" Margin="{StaticResource StandardPadding}" Foreground="{StaticResource IconBrush}" />
-                    <Label Margin="{StaticResource StandardPadding}" HorizontalAlignment="Center" VerticalAlignment="Center" Content="Add New Flight" />
-                </StackPanel>
-            </Button>
-        </Grid>
+        <ComboBox Grid.Row="0" Grid.Column="0" Margin="{StaticResource StandardPadding}" ItemsSource="{Binding SortOptions}" SelectedIndex="{Binding SortSelectedIndex, Mode=TwoWay}" VerticalContentAlignment="Center" HorizontalContentAlignment="Center">
+        </ComboBox>
 
         <Border Grid.Row="1" Grid.Column="0"  BorderBrush="DarkGray" BorderThickness="0 1 1 1" Margin="{StaticResource StandardPadding}">
             <ScrollViewer HorizontalScrollBarVisibility="Hidden" VerticalScrollBarVisibility="Auto" Padding="0" Margin="0">
